# lttng-tools

./: .gitignore  DO_NO_MERGE.txt  configure.ac  rename.sh
doc/examples/map/: Makefile  demo.sh  instrumented-app.c  query-example.c  tracepoint-incr-value-example.c  tracepoint-incr-value-example.h
doc/examples/trigger-on-event/: notification-client.c
doc/man/: Makefile.am  lttng-add-map.1.txt  lttng-add-trigger.1.txt  lttng-disable-map.1.txt  lttng-enable-map.1.txt  lttng-list.1.txt  lttng-view-map.1.txt
include/: Makefile.am
include/lttng/: event-expr.h  event-internal.h  event.h  kernel-function-internal.h  kernel-function.h  log-level-rule-internal.h  log-level-rule.h  lttng-error.h  lttng.h  map-key-internal.h  map-key.h
include/lttng/action/: action-internal.h  action.h  group-internal.h  incr-value-internal.h  incr-value.h  notify-internal.h  notify.h
include/lttng/condition/: buffer-usage-internal.h  condition-internal.h  (+5 more)
src/common/: Makefile.am  credentials.c  elf.c  elf.h  error.c  evaluation.c  event-expr-to-bytecode.c  exclusion.c  exclusion.h  index-allocator.c  index-allocator.h  kernel-function.c  log-level-rule.c  lttng-elf.c  lttng-elf.h  lttng-kernel.h  macros.h  map-query.c  map.c  runas.c  runas.h  shm.c  trigger.c  unix.c  uprobe-offset.c  uprobe-offset.h  userspace-probe-offset.c  userspace-probe-offset.h  userspace-probe.c  utils.c  utils.h
tests/destructive/: metadata-regeneration
tests/regression/: Makefile.am
tests/regression/kernel/: select_poll_epoll.c  test_clock_override  test_kernel_function  test_rotation_destroy_flush  test_uprobe_function_event  test_userspace_probe
tests/regression/tools/: Makefile.am
tests/regression/tools/exclusion/: test_exclusion
tests/regression/tools/filtering/: test_valid_filter
tests/regression/tools/map/: Makefile.am  map_base_test.sh  test_map  test_map_kernel  test_map_query.c  test_map_ust
tests/regression/tools/notification/: Makefile.am  base_client.c  notification.c  sessiond_testpoints.c  test_notification_kernel  test_notification_kernel_buffer_usage  test_notification_multi_app  test_notification_notifier_discarded_count  test_notification_trigger_discarded_count  test_notification_ust  test_notification_ust_buffer_usage
tests/regression/tools/regen-metadata/: test_kernel
tests/regression/tools/regen-statedump/: test_kernel
tests/regression/tools/save-load/: Makefile.am  load-42-maps.lttng  test_load  test_save
tests/regression/tools/trigger/: base_client.c  test_add_trigger_cli  test_create_trigger_cli  test_destroy_trigger_cli  test_list_triggers_cli  test_remove_trigger_cli
tests/regression/tools/trigger/start-stop/: test_start_stop
tests/regression/tools/trigger/utils/: Makefile.am  notification-client.c
tests/regression/tools/wildcard/: test_event_wildcard
tests/unit/: Makefile.am  test_action.c  test_condition.c  test_event_rule.c  test_kernel_data.c  test_log_level_rule.c  test_map.c  test_map_key.c  test_map_query.c  test_ust_data.c
tests/utils/: utils.sh
(+58 files in other folders)
